Shortest paths (#36)
* updated API

* graph tests are failing

* implemented current functionality

* get multiple tests is failing

* working on code

* Refactored to have new function _shortestPath

* tests are passing

* randomizing shortest paths

* fixed test which was unpredictable

* updated swagger docs for shortest ptah

* added in api changes into handlers, tests are passing

updated version file
